feat: Add GitHub Actions workflow to build and release FluentDraft on tag push or manual dispatch.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,16 +32,11 @@ jobs:
       run: |
         dotnet publish src/FluentDraft/FluentDraft.csproj -c Release -r win-x64 --self-contained true -o ./publish /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:DebugType=None
 
-    - name: Rename exe with version
-      run: |
-        $version = "${{ github.ref_name }}"
-        Move-Item ./publish/FluentDraft.exe "./publish/FluentDraft_$version.exe"
-
     - name: Create Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ./publish/FluentDraft_*.exe
+        files: ./publish/FluentDraft.exe
         draft: false
         prerelease: false
       env:
