--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,20 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
         dotnet-version: '10.0.x'
+
+    - name: Extract version from tag
+      id: version
+      run: |
+        $tag = "${{ github.ref_name }}"
+        $version = $tag -replace '^v', ''
+        echo "VERSION=$version" >> $env:GITHUB_OUTPUT
+        echo "Extracted version: $version"
 
     - name: Restore dependencies
       run: dotnet restore FluentDraft.sln
@@ -28,16 +36,22 @@ jobs:
     - name: Build
       run: dotnet build FluentDraft.sln --configuration Release --no-restore
 
-    - name: Publish (Single File)
+    - name: Publish
       run: |
-        dotnet publish src/FluentDraft/FluentDraft.csproj -c Release -r win-x64 --self-contained true -o ./publish /p:PublishSingleFile=true /p:IncludeNativeLibrariesForSelfExtract=true /p:DebugType=None
+        dotnet publish src/FluentDraft/FluentDraft.csproj -c Release -r win-x64 --self-contained -o ./publish /p:DebugType=None
 
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: ./publish/FluentDraft.exe
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Install Velopack CLI
+      run: dotnet tool install -g vpk
+
+    - name: Download previous release (for delta updates)
+      continue-on-error: true
+      run: |
+        vpk download github --repoUrl "https://github.com/${{ github.repository }}" -o ./releases
+
+    - name: Pack with Velopack
+      run: |
+        vpk pack --packId FluentDraft --packVersion ${{ steps.version.outputs.VERSION }} --packDir ./publish --mainExe FluentDraft.exe -o ./releases
+
+    - name: Upload to GitHub Release
+      run: |
+        vpk upload github --repoUrl "https://github.com/${{ github.repository }}" --token "${{ secrets.GITHUB_TOKEN }}" -o ./releases --releaseName "FluentDraft v${{ steps.version.outputs.VERSION }}" --tag "${{ github.ref_name }}"
