fix(ci): restrict workflow to main repository only, skip forks

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
+    # Only run on main repository, not on forks
+    if: github.repository == 'FluentDraft/FluentDraft'
+
 
     steps:
     - name: Checkout code
