chore(ci): fix dotnet cache dependency path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         dotnet-version: '10.0.x'
         cache: true
+        cache-dependency-path: FluentDraft.sln
 
     - name: Extract version from tag
       id: version
