--- a/src/FluentDraft/FluentDraft.csproj
+++ b/src/FluentDraft/FluentDraft.csproj
@@ -13,9 +13,9 @@
     <Description>Global Voice Typing for Windows powered by AI</Description>
     <Copyright>Copyright (c) 2026 FluentDraft Contributors</Copyright>
     <AssemblyTitle>FluentDraft</AssemblyTitle>
-    <Version>1.7.0</Version>
-    <AssemblyVersion>1.7.0.0</AssemblyVersion>
-    <FileVersion>1.7.0.0</FileVersion>
+    <Version>1.7.1</Version>
+    <AssemblyVersion>1.7.1.0</AssemblyVersion>
+    <FileVersion>1.7.1.0</FileVersion>
     <!-- Velopack: Custom Main method entry point -->
     <StartupObject>FluentDraft.App</StartupObject>
   </PropertyGroup>
@@ -48,9 +48,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Sounds\**">
+    <Content Include="Sounds\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 </Project>
 
