fix: explicit CopyToPublishDirectory and gitignore for sounds, bump to 1.7.2

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ logs/
 settings.json
 build_errors*.txt
 *.wav
+!src/FluentDraft/Sounds/start.wav
+!src/FluentDraft/Sounds/stop.wav
 *.mp3
 *.webm
 startup_log.txt
