fix: ensure sound files are committed and tracked, bump to 1.7.3

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,7 @@ logs/
 settings.json
 build_errors*.txt
 *.wav
-!src/FluentDraft/Sounds/start.wav
-!src/FluentDraft/Sounds/stop.wav
+!src/FluentDraft/Sounds/
 *.mp3
 *.webm
 startup_log.txt
